appId: com.saucelabs.mydemoapp.rn
---
- runFlow:
    file: open_menu.yaml
- runFlow:
    when:
      platform: Android
    commands: 
        - tapOn: "Log In"
        - tapOn: "Username input field"
        - inputText: "${MAESTRO_USERNAME}"
        - inputText: "${MAESTRO_EMAIL_DOMAIN}"
        - tapOn: "Password input field"
        - inputText: "${MAESTRO_PASSWORD}"
        - hideKeyboard
        - assertVisible: "Login button"
        - tapOn: "Login button"
- runFlow:
    when:
      platform: iOS
    commands:
        - tapOn: "Log In"
        - tapOn:
            id: "Username input field"
        - inputText: "${MAESTRO_USERNAME}"
        - inputText: "${MAESTRO_EMAIL_DOMAIN}"
        - tapOn:
            id: "Password input field"
        - inputText: "${MAESTRO_PASSWORD}"
        - tapOn:
           point: "50%,30%"
        - tapOn:
            text: "Login"
            index: 1