appId: com.saucelabs.mydemoapp.rn
---
- tapOn: "Log In"
- tapOn: "Username input field"
- inputText: "${MAESTRO_USERNAME}"
- tapOn: "Password input field"
- inputText: "${MAESTRO_PASSWORD}"
- tapOn: "Login button"