appId: com.saucelabs.mydemoapp.rn
---
- tapOn: "Log In"
- tapOn:
    id: "Username input field"
- inputText: "${MAESTRO_USERNAME}"
- tapOn:
    id: "Password input field"
- inputText: "${MAESTRO_PASSWORD}"
- tapOn:
    point: "50%,30%"
- tapOn:
    text: "Login"
    index: 1