appId: com.saucelabs.mydemoapp.rn
name: Flow - Catalog Smoke Test - Browse and Add to Cart Guest
tags:
  - catalog
  - smoke
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Products"
    timeout: 50000
- waitForAnimationToEnd
- runFlow:
    file: ../../../commands/add_product_to_cart.yaml
    env:
      PRODUCT_NAME: "Sauce Labs Backpack"
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "cart badge"
      - assertVisible: "Sauce Labs Backpack"
      - assertVisible: "My Cart"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: "1"
          index: 1
      - assertVisible: "Sauce Labs Backpack"
      - assertVisible: "My Cart"