appId: com.saucelabs.mydemoapp.rn
name: Subflow - Fill Login Form
tags:
  - common 
---
- runFlow:
    when:
      platform: Android
    commands:
      - tapOn: "Username input field"
      - inputText: "${MAESTRO_USERNAME}"
      - inputText: "${MAESTRO_EMAIL_DOMAIN}"
      - tapOn: "Password input field"
      - inputText: "${MAESTRO_PASSWORD}"
      - hideKeyboard
      - assertVisible: "Login button"
      - tapOn: "Login button"
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          id: "Username input field"
      - inputText: "${MAESTRO_USERNAME}"
      - inputText: "${MAESTRO_EMAIL_DOMAIN}"
      - tapOn:
          id: "Password input field"
      - inputText: "${MAESTRO_PASSWORD}"
      - tapOn:
          point: "50%,30%"
      - tapOn:
          text: "Login"
          index: 1
